// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render simple timeline graph 1`] = `
<div>
  <div
    class="timelineContainer"
  >
    <div
      class="timelineContent"
    >
      <div
        class=""
      >
        <div
          class="timelineDateContainer"
        >
          <p
            class="smallDate"
            data-testid="timeline-year-0"
          >
            2018
          </p>
          <p
            class="timelineDate"
            data-testid="timeline-date-0"
          >
            20 Apr
          </p>
        </div>
        <div
          class="timeline timelineStart"
        >
          <div
            class="notch"
          />
          <div
            class="timelinePaper"
            data-testid="timeline-item-0"
            id="0"
          >
            <div
              class="paperContent"
            >
              <div>
                Testing
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="lastItem"
      >
        <div
          class="timelineDateContainer"
        >
          <p
            class="smallDate"
            data-testid="timeline-year-1"
          >
            2018
          </p>
          <p
            class="timelineDate"
            data-testid="timeline-date-1"
          >
            20 Apr
          </p>
        </div>
        <div
          class="timeline timelineEnd"
        >
          <div
            class="notch"
          />
          <div
            class="timelinePaper"
            data-testid="timeline-item-1"
            id="1"
          >
            <div
              class="paperContent"
            >
              <div>
                Testing
              </div>
              <div
                class="user"
              >
                <div
                  class="avatarIconContainer"
                  data-testid="avatar-icon"
                >
                  <button
                    class="userButton"
                    data-testid="timeline-avatar"
                    disabled=""
                    id="timeline-avatar"
                    tabindex="-1"
                    type="button"
                  >
                    <span>
                      <svg
                        aria-hidden="true"
                        class="userAvatar"
                        data-testid="avatar-icon-avatar"
                        focusable="false"
                        role="presentation"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 3c1.66 0 3 1.34 3 3s-1.34 3-3 3-3-1.34-3-3 1.34-3 3-3zm0 14.2c-2.5 0-4.71-1.28-6-3.22.03-1.99 4-3.08 6-3.08 1.99 0 5.97 1.09 6 3.08-1.29 1.94-3.5 3.22-6 3.22z"
                        />
                      </svg>
                    </span>
                  </button>
                </div>
                nsawas
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`render simple timeline graph with time 1`] = `
<div>
  <div
    class="timelineContainer"
  >
    <div
      class="timelineContent"
    >
      <div
        class=""
      >
        <div
          class="timelineDateContainer"
        >
          <p
            class="smallDate"
            data-testid="timeline-year-0"
          >
            2018
          </p>
          <p
            class="timelineDate"
            data-testid="timeline-date-0"
          >
            20 Apr
          </p>
          <p
            class="smallDate"
            data-testid="timeline-time-0"
          >
            16:20
          </p>
        </div>
        <div
          class="timeline timelineStart"
        >
          <div
            class="notch"
          />
          <div
            class="timelinePaper"
            data-testid="timeline-item-0"
            id="0"
          >
            <div
              class="paperContent"
            >
              <div>
                Testing
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="lastItem"
      >
        <div
          class="timelineDateContainer"
        >
          <p
            class="smallDate"
            data-testid="timeline-year-1"
          >
            2018
          </p>
          <p
            class="timelineDate"
            data-testid="timeline-date-1"
          >
            20 Apr
          </p>
          <p
            class="smallDate"
            data-testid="timeline-time-1"
          >
            16:20
          </p>
        </div>
        <div
          class="timeline timelineEnd"
        >
          <div
            class="notch"
          />
          <div
            class="timelinePaper"
            data-testid="timeline-item-1"
            id="1"
          >
            <div
              class="paperContent"
            >
              <div>
                Testing
              </div>
              <div
                class="user"
              >
                <div
                  class="avatarIconContainer"
                  data-testid="avatar-icon"
                >
                  <button
                    class="userButton"
                    data-testid="timeline-avatar"
                    disabled=""
                    id="timeline-avatar"
                    tabindex="-1"
                    type="button"
                  >
                    <span>
                      <svg
                        aria-hidden="true"
                        class="userAvatar"
                        data-testid="avatar-icon-avatar"
                        focusable="false"
                        role="presentation"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 3c1.66 0 3 1.34 3 3s-1.34 3-3 3-3-1.34-3-3 1.34-3 3-3zm0 14.2c-2.5 0-4.71-1.28-6-3.22.03-1.99 4-3.08 6-3.08 1.99 0 5.97 1.09 6 3.08-1.29 1.94-3.5 3.22-6 3.22z"
                        />
                      </svg>
                    </span>
                  </button>
                </div>
                nsawas
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`test selecting an item on the timeline card 1`] = `
<div>
  <div
    class="timelineContainer"
  >
    <div
      class="timelineCard card"
      data-testid="card"
    >
      <div
        class=""
        data-testid="card-body"
      >
        <div
          class="spinnerOverlay"
          data-is-active="false"
          data-testid="spinner-overlay"
        >
          <div
            class="loading"
          />
        </div>
        <div
          class="timelineContent"
        >
          <div
            class=""
          >
            <div
              class="timelineDateContainer"
            >
              <p
                class="smallDate"
                data-testid="timeline-year-0"
              >
                2018
              </p>
              <p
                class="timelineDate"
                data-testid="timeline-date-0"
              >
                20 Apr
              </p>
            </div>
            <div
              class="timeline timelineStart"
            >
              <div
                class="notch"
              />
              <div
                class="timelinePaperButton"
                data-testid="timeline-item-0"
                id="0"
              >
                <div
                  class="paperContent"
                >
                  <div>
                    Testing
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="lastItem"
          >
            <div
              class="timelineDateContainer"
            >
              <p
                class="smallDate"
                data-testid="timeline-year-1"
              >
                2018
              </p>
              <p
                class="timelineDate"
                data-testid="timeline-date-1"
              >
                20 Apr
              </p>
            </div>
            <div
              class="timeline timelineEnd"
            >
              <div
                class="notch"
              />
              <div
                class="timelinePaperButton"
                data-testid="timeline-item-1"
                id="1"
              >
                <div
                  class="paperContent"
                >
                  <div>
                    Testing
                  </div>
                  <div
                    class="user"
                  >
                    <div
                      class="avatarIconContainer"
                      data-testid="avatar-icon"
                    >
                      <button
                        class="userButton"
                        data-testid="timeline-avatar"
                        disabled=""
                        id="timeline-avatar"
                        tabindex="-1"
                        type="button"
                      >
                        <span>
                          <svg
                            aria-hidden="true"
                            class="userAvatar"
                            data-testid="avatar-icon-avatar"
                            focusable="false"
                            role="presentation"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 3c1.66 0 3 1.34 3 3s-1.34 3-3 3-3-1.34-3-3 1.34-3 3-3zm0 14.2c-2.5 0-4.71-1.28-6-3.22.03-1.99 4-3.08 6-3.08 1.99 0 5.97 1.09 6 3.08-1.29 1.94-3.5 3.22-6 3.22z"
                            />
                          </svg>
                        </span>
                      </button>
                    </div>
                    nsawas
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`test tabbed timeline cartd 1`] = `
<div>
  <div
    class="timelineContainer"
  >
    <div
      class="timelineCard card"
      data-testid="card"
    >
      <div
        class="timelineCardBody"
        data-testid="card-body"
      >
        <div
          class="tabsWrapper"
        >
          <div
            class="tabs"
            data-testid="card-tabs"
          >
            <div
              class=""
              style="overflow: hidden;"
            >
              <div
                class="tabsContainer"
                role="tablist"
              >
                <button
                  aria-selected="true"
                  class=""
                  data-testid="timeline-tab-tabOne"
                  role="tab"
                  tabindex="0"
                  type="button"
                >
                  <span>
                    Tab One
                  </span>
                  <span
                    class=""
                  />
                </button>
                <button
                  aria-selected="false"
                  class=""
                  data-testid="timeline-tab-tabTwo"
                  role="tab"
                  tabindex="0"
                  type="button"
                >
                  <span>
                    Tab Two
                  </span>
                  <span
                    class=""
                  />
                </button>
              </div>
              <span
                class=""
                style="left: 0px; width: 0px;"
              />
            </div>
          </div>
        </div>
        <div
          class="timelineContent"
        >
          <div
            class=""
          >
            <div
              class="timelineDateContainer"
            >
              <p
                class="smallDate"
                data-testid="timeline-year-0"
              >
                2018
              </p>
              <p
                class="timelineDate"
                data-testid="timeline-date-0"
              >
                20 Apr
              </p>
            </div>
            <div
              class="timeline timelineStart"
            >
              <div
                class="notch"
              />
              <div
                class="timelinePaper"
                data-testid="timeline-item-0"
                id="0"
              >
                <div
                  class="paperContent"
                >
                  <div>
                    Testing
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="lastItem"
          >
            <div
              class="timelineDateContainer"
            >
              <p
                class="smallDate"
                data-testid="timeline-year-1"
              >
                2018
              </p>
              <p
                class="timelineDate"
                data-testid="timeline-date-1"
              >
                20 Apr
              </p>
            </div>
            <div
              class="timeline timelineEnd"
            >
              <div
                class="notch"
              />
              <div
                class="timelinePaper"
                data-testid="timeline-item-1"
                id="1"
              >
                <div
                  class="paperContent"
                >
                  <div>
                    Testing
                  </div>
                  <div
                    class="user"
                  >
                    <div
                      class="avatarIconContainer"
                      data-testid="avatar-icon"
                    >
                      <button
                        class="userButton"
                        data-testid="timeline-avatar"
                        disabled=""
                        id="timeline-avatar"
                        tabindex="-1"
                        type="button"
                      >
                        <span>
                          <svg
                            aria-hidden="true"
                            class="userAvatar"
                            data-testid="avatar-icon-avatar"
                            focusable="false"
                            role="presentation"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 3c1.66 0 3 1.34 3 3s-1.34 3-3 3-3-1.34-3-3 1.34-3 3-3zm0 14.2c-2.5 0-4.71-1.28-6-3.22.03-1.99 4-3.08 6-3.08 1.99 0 5.97 1.09 6 3.08-1.29 1.94-3.5 3.22-6 3.22z"
                            />
                          </svg>
                        </span>
                      </button>
                    </div>
                    nsawas
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`test unselecting an item on the timeline card 1`] = `
<div>
  <div
    class="timelineContainer naji"
  >
    <div
      class="timelineCard card"
      data-testid="card"
    >
      <div
        class=""
        data-testid="card-body"
      >
        <div
          class="spinnerOverlay"
          data-is-active="false"
          data-testid="spinner-overlay"
        >
          <div
            class="loading"
          />
        </div>
        <div
          class="timelineContent"
        >
          <div
            class=""
          >
            <div
              class="timelineDateContainer"
            >
              <p
                class="smallDate"
                data-testid="timeline-year-0"
              >
                2018
              </p>
              <p
                class="timelineDate"
                data-testid="timeline-date-0"
              >
                20 Apr
                <div
                  data-testid="timeline-day-0"
                >
                  Fri
                </div>
              </p>
            </div>
            <div
              class="timeline timelineStart"
            >
              <div
                class="notch selected"
              />
              <div
                class="timelinePaperButton timelinePaperSelected"
                data-testid="timeline-item-0"
                id="0"
              >
                <div
                  class="paperContent"
                >
                  <div>
                    Testing
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="lastItem"
          >
            <div
              class="timelineDateContainer"
            >
              <p
                class="smallDate"
                data-testid="timeline-year-1"
              >
                2018
              </p>
              <p
                class="timelineDate"
                data-testid="timeline-date-1"
              >
                20 Apr
                <div
                  data-testid="timeline-day-1"
                >
                  Fri
                </div>
              </p>
            </div>
            <div
              class="timeline timelineEnd"
            >
              <div
                class="notch"
              />
              <div
                class="timelinePaperButton"
                data-testid="timeline-item-1"
                id="1"
              >
                <div
                  class="paperContent"
                >
                  <div>
                    Testing
                  </div>
                  <div
                    class="user"
                  >
                    <div
                      class="avatarIconContainer"
                      data-testid="avatar-icon"
                    >
                      <button
                        class="userButton"
                        data-testid="timeline-avatar"
                        disabled=""
                        id="timeline-avatar"
                        tabindex="-1"
                        type="button"
                      >
                        <span>
                          <svg
                            aria-hidden="true"
                            class="userAvatar"
                            data-testid="avatar-icon-avatar"
                            focusable="false"
                            role="presentation"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 3c1.66 0 3 1.34 3 3s-1.34 3-3 3-3-1.34-3-3 1.34-3 3-3zm0 14.2c-2.5 0-4.71-1.28-6-3.22.03-1.99 4-3.08 6-3.08 1.99 0 5.97 1.09 6 3.08-1.29 1.94-3.5 3.22-6 3.22z"
                            />
                          </svg>
                        </span>
                      </button>
                    </div>
                    nsawas
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
